# TreasureHacks2021API

./: README.md  email_sender.py  firebase-admin-conf.json  firebase_interactor.py  imgur_interactor.py  main.py  pyproject.toml  requirements.txt  securer.py
data_classes/: chat.py  queried_list.py  research_project.py  responses.py  timed_data.py  user.py
