[tool.poetry]
name = "repl_python3_beta_ResearchFinderAPI"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
firebase-admin = "^5.0.3"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
Pyrebase = "^3.0.27"
Werkzeug = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
